# sandwich-finder

./: Cargo.toml  README.md  update.sh
reports/332845740_338893740/: filtered_report.csv  (+1 more)
sandwich-finder/: Cargo.toml
sandwich-finder/src/: detector.rs  lib.rs  utils.rs
sandwich-finder/src/events/: addresses.rs  common.rs  event.rs  mod.rs  sandwich.rs  swap.rs  transaction.rs  transfer.rs
sandwich-finder/src/events/swaps/: addresses.rs  alpha.rs  apesu.rs  aqua.rs  clearpool.rs  discoverer.rs  dooar.rs  finder.rs  fluxbeam.rs  fusionamm.rs  goonfi.rs  heaven.rs  humidifi.rs  jup_order_engine.rs  jup_perps.rs  lifinity_v2.rs  limo.rs  meteora.rs  meteora_damm_v2.rs  meteora_dbc.rs  meteora_dlmm.rs  mod.rs  onedex.rs  openbook_v2.rs  pancake_swap.rs  pumpamm.rs  pumpfun.rs  pumpup.rs  raydium_cl.rs  raydium_lp.rs  raydium_v4.rs  raydium_v5.rs  saros_dlmm.rs  solfi.rs  stabble_weighted.rs  sugar.rs  sv2e.rs  swap_finder_ext.rs  tessv.rs  utils.rs  (+2 more)
sandwich-finder/src/events/transfers/: mod.rs  stake.rs  system.rs  token.rs  transfer_finder_ext.rs
sandwich-finder/src/swaps/: addresses.rs  apesu.rs  aqua.rs  discoverer.rs  dlmm.rs  finder.rs  fluxbeam.rs  goonfi.rs  humidifi.rs  jup_order_engine.rs  lifinity_v2.rs  meteora.rs  meteora_damm_v2.rs  meteora_dbc.rs  meteora_dlmm.rs  mod.rs  onedex.rs  openbook_v2.rs  pancake_swap.rs  pumpamm.rs  pumpfun.rs  raydium_cl.rs  raydium_lp.rs  raydium_v4.rs  raydium_v5.rs  saros_dlmm.rs  solfi.rs  stabble_weighted.rs  sugar.rs  sv2e.rs  tessv.rs  utils.rs  whirlpool.rs  zerofi.rs
src/: lib.rs  loss_calc.rs  utils.rs
(+61 files in other folders)
