[package]
name = "sandwich-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
clap = "4.5.27"
dashmap = "6.1.0"
debug_print = "1.0.0"
derive-getters = "0.5.0"
dotenv = "0.15.0"
futures = "0.3.31"
mysql = "26.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.137"
sandwich-finder-derive = { path = "../sandwich-finder-derive" }
solana-rpc-client = "2.1.9"
solana-rpc-client-api = "2.1.9"
solana-sdk = "2.1.9"
tokio = "1.43.0"
yellowstone-grpc-client = "4.1.0+solana.2.1.9"
yellowstone-grpc-proto = "4.1.0+solana.2.1.9"
sha2 = "0.10.9"
convert_case = "0.8.0"
hex = "0.4.3"
